$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

July 13, 2009
------------
#500988 by Michelle: Now works without nodecomment.
#500988 by Michelle: Some work on getting AF to work without NC.
NOISSUE by Michelle: Various notice fixes.
#497450 by Michelle: More work on Author Pane image conversion.
#512222 by Michelle: Fixed typo preventing 'submitted' template from being found.
#515966 by Michelle: Moved topic navigation out of node content and down to bottom of topic.
NOISSUE by Michelle: Fixed post reply button incorrectly showing up at the bottom of topic when using nodecomment.
NOISSUE by Michelle: Made the pager at the bottom of a topic look better in blue lagoon.
#483544 by Michelle: Copied code from Nodecomment to remove the teaser splitter.
NOISSUE by Michelle: Added functions to return node types that can be in a forum and tell if a given node type is in the forum.

July 8, 2009
------------
#512222 by Michelle: Added in Naked as an automatic base theme for templates to avoid errors if a style does not include templates.
#512222 by Michelle: Changed over to using style name in template files to avoid problems with styles defined by themes.

July 5, 2009
------------
#383116 by Michelle: Added terms to post and added new top post footer to hold them.
#268421 by Michelle: Added edit/delete links to nodes of types that can be in the forums. Thanks to nodecomment for some of the code.

July 4, 2009
------------
NOISSUE by Michelle: Moved around the forum legend & link lists to reduce clutter and organize them better on the page.
#509878 by Michelle: Fixed broken link on 'post reply' with help from marsilainen on IRC.
NOISSUE by Michelle: Switched order of links div and search div to line them up better on the main forums page.
#509716 by Michelle, merlinofchaos: Fixed problem with views not getting style applied.
#497450 by Michelle: Made translated images work. Moved all images into new directories.