@@ -9,12 +9,12 @@
 ?>
 
 <div class="forum-topic-legend clear-block">
-  <div class="topic-icon-new-posts"><?php print t('New posts'); ?></div>
-  <div class="topic-icon-no-new-posts"><?php print t('No new posts'); ?></div>
-  <div class="topic-icon-hot-new-posts"><?php print t('Hot topic with new posts'); ?></div>
-  <div class="topic-icon-hot-no-new-posts"><?php print t('Hot topic without new posts'); ?></div>
-  <div class="topic-icon-sticky-topic"><?php print t('Sticky topic'); ?></div>
-  <div class="topic-icon-locked-topic"><?php print t('Locked topic'); ?></div>
+  <div class="topic-icon-new"><?php print t('New posts'); ?></div>
+  <div class="topic-icon-default"><?php print t('No new posts'); ?></div>
+  <div class="topic-icon-hot-new"><?php print t('Hot topic with new posts'); ?></div>
+  <div class="topic-icon-hot"><?php print t('Hot topic without new posts'); ?></div>
+  <div class="topic-icon-sticky"><?php print t('Sticky topic'); ?></div>
+  <div class="topic-icon-closed"><?php print t('Locked topic'); ?></div>
 </div>
  
  
